[package]
name = "twoby20"
version = "0.1.0"
authors = ["geauxvirtual <justin.guidroz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "2by20"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = "2"
#directories = "4"
fern = "0.6"
iced = { "version" = "0.3", "features" = ["smol"] }
iced_native = "0.4"
libant = { "path" = "../libant" }
log = "0.4"
